# BindSite

./: .gitignore  README.md  pyproject.toml
data/fasta/: PEP_Test_125.fa  PEP_Test_639.fa  PEP_Train_1154.fa  PEP_Train_640.fa
docs/: pipeline.md
docs/paper/: DeepProSite_structure-aware_protein_binding_site_p.txt  btad718_supplementary_data.txt
scripts/: fold.py
src/bindsite/: __init__.py  cli.py  config.py  data.py  folding.py
src/bindsite/cli/: data.py  features.py  main.py  model.py  prepare.py
src/bindsite/core/: config.py  data.py  folding.py  logger.py
src/bindsite/data/: __init__.py  dataset.py  dssp.py  fasta.py  features.py  fold.py  io.py  manager.py  pdb.py  protrans.py
src/bindsite/features/: dssp.py  esm2.py  pipeline.py  prott5.py
src/bindsite/model/: __init__.py  attention.py  edge_features.py  graph_transformer.py  scheduler.py
src/bindsite/models/: graph_transformer.py  layers.py
src/bindsite/tasks/: evaluation.py  folding.py  inference.py  training.py
src/bindsite/training/: __init__.py  evaluator.py  metrics.py  trainer.py
src/bindsite/utils/: logger.py
