[project]
name = "bindsite"
version = "0.1.0"
description = "Protein binding site prediction inspired by DeepProSite"
readme = "README.md"
authors = [
    { name = "Viet Ngo Quang", email = "vietnq.work@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.87",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.4.0",
    "tqdm>=4.67.3",
    "transformers==4.49.0",
    "typer>=0.24.1",
]

[project.scripts]
bindsite = "bindsite.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
